samples/_failures_safe/1761462078_cd45f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a8ba98f.c: In function ‘main’:
./samples/SAFE/__tmp_7a8ba98f.c:162:5: error: expected declaration or statement at end of input
  162 |     }
      |     ^
